--- a/template/index.html
+++ b/template/index.html
@@ -48,10 +48,36 @@
       color: #757575;
     }
 
+    ::-moz-placeholder { /* Firefox 18- */
+      color: #757575;
+    };
+
+    ::-moz-placeholder { /* Firefox 18- */
+      color: #757575;
+    };
+
+    ::-moz-placeholder {
+      opacity: 1; /* reset firefox opacity value */
+    };
+
+    ::placeholder {
+      color: #757575;
+    };
+
+    .visually-hidden {
+      clip: rect(1px, 1px, 1px, 1px);
+      height: 1px;
+      overflow: hidden;
+      position: absolute;
+      white-space: nowrap;
+      width: 1px;
+    }
 
   </style>
 </head>
 <body>
-
+  <script type="text/javascript">
+    
+  </script>
 </body>
 </html>
