--- a/template/index.html
+++ b/template/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie-edge">
+  <meta http-equiv="x-ua-compatible" content="IE=edge">
   <title></title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  <style type="text/css">
+  <style>
     html {
       background-size: cover;
       box-sizing: border-box;
@@ -76,7 +76,7 @@
   </style>
 </head>
 <body>
-  <script type="text/javascript">
+  <script>
     
   </script>
 </body>
